<resources>
    <string name="app_name">What\'sApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recycler_chat">Recycler Chat</string>
    <string name="recycler_status">Recycler status</string>
    <string name="recycler_call">Recycler call</string>
    <string name="settings">Settings</string>
    <string name="payments">Payments</string>
    <string name="starred_messages">Starred Messages</string>
    <string name="linked_devices">Linked devices</string>
    <string name="new_broadcast">New broadcast</string>
    <string name="new_group">New group</string>
    <string name="person_name">Person name</string>
    <string name="time">Time</string>
    <string name="chat">Chat</string>
    <string name="status">Status</string>
    <string name="status_privacy">Status privacy</string>
    <string name="recent">Recent</string>
    <string name="camera">Camera</string>
    <string name="search">Search</string>
    <string name="channels">Channels</string>
    <string name="find_channels">Find channels</string>
    <string name="channel_name">Channel Name</string>
    <string name="follow">Follow</string>
</resources>